syntax = "proto2";
package mmo.proto;

import "loot_entry.proto";

message ObjectLoot {
	repeated LootEntry entry = 1;
}
