syntax = "proto2";
package mmo.proto;

import "loot_entry.proto";

message SkinningLoot {
	repeated LootEntry entry = 1;
}
